# smalllight

./: ChangeLog  LICENSE  Makefile.in  README  README.JA  README.imlib2  configure  configure.in  mod_small_light.c  mod_small_light.h  mod_small_light_dummy.c  mod_small_light_ext_jpeg.c  mod_small_light_ext_jpeg.h  mod_small_light_imagemagick.c  mod_small_light_imlib2.c
