AC_PREREQ(2.59)
AC_INIT(mod_small_light, 1.0.1)

AC_PROG_CC

# imlib2
AC_MSG_CHECKING(whether to enable imlib2 support)
AC_ARG_WITH(
    imlib2,
    AC_HELP_STRING([--without-imlib2], [disable imlib2 support]),
    [
        if test "$withval" = "no"; then
            ENABLE_IMLIB2="no"
        else
            ENABLE_IMLIB2="yes"
            IMLIB2_PREFIX="$withval"
        fi
    ],
    ENABLE_IMLIB2="auto"
)
AC_MSG_RESULT($ENABLE_IMLIB2)

if test "$ENABLE_IMLIB2" != "no"; then
    AC_ARG_WITH(
        imlib2-config,
        AC_HELP_STRING([--with-imlib2-config=FILE], [location of the imlib2-config program]),
        IMLIB2_CONFIG="$withval",
        IMLIB2_CONFIG="no"
    )
    if test "$IMLIB2_CONFIG" = "no"; then
        AC_PATH_PROG(
            IMLIB2_CONFIG,
            imlib2-config,
            "no",
            /bin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
        )
    else
        AC_CHECK_PROG(IMLIB2_CONFIG, imlib2-config)
    fi
    if test "$IMLIB2_CONFIG" = "no"; then
        AC_MSG_ERROR([imlib2 not found])
    else
        AC_SUBST(IMLIB2_CONFIG)
        CFLAGS_IMLIB2="-DENABLE_IMLIB2"
        AC_SUBST(CFLAGS_IMLIB2)
    fi
fi

# ImageMagick
AC_MSG_CHECKING(whether to enable Wand support)
AC_ARG_WITH(
    Wand,
    AC_HELP_STRING([--without-Wand], [disable Wand support]),
    [
        if test "$withval" = "no"; then
            ENABLE_WAND="no"
        else
            ENABLE_WAND="yes"
            WAND_PREFIX="$withval"
        fi
    ],
    ENABLE=WAND="auto"
)
AC_MSG_RESULT($ENABLE_WAND)

if test "$ENABLE_WAND" != "no"; then
    AC_ARG_WITH(
        Wand-config,
        AC_HELP_STRING([--with-Wand-config=FILE], [location of the Wand-config program]),
        WAND_CONFIG="$withval",
        WAND_CONFIG="no"
    )
    if test "$WAND_CONFIG" = "no"; then
        AC_PATH_PROG(
            WAND_CONFIG,
            Wand-config,
            "no",
            /bin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
        )
    else
        AC_CHECK_PROG(WAND_CONFIG, Wand-config)
    fi
    if test "$WAND_CONFIG" = "no"; then
        AC_MSG_ERROR([wand not found])
    else
        AC_SUBST(WAND_CONFIG)
        CFLAGS_WAND="-DENABLE_WAND"
        AC_SUBST(CFLAGS_WAND)
    fi
fi

# apxs
AC_ARG_WITH(
    apxs,
    AC_HELP_STRING([--with-apxs=FILE], [location of the apxs program]),
    APXS="$withval",
    APXS="no"
)
if test "$APXS" = "no"; then
    AC_MSG_ERROR([apxs not found])
fi
AC_SUBST(APXS)

AC_OUTPUT(Makefile)

